--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1 {
-    background-color: black;
-    color: wheat;
-    padding: 15px;
+  background-color: green;
+  color: wheat;
+  padding: 15px;
 }
