--- a/style.css
+++ b/style.css
@@ -2,13 +2,62 @@
   box-sizing: border-box;
 }
 
+.list {
+  list-style: none;
+}
+
 .article {
   width: 370px;
-  position: absolute;
+  text-align: center;
 
-  margin: 0 auto;
-  left: 0;
-  right: 0;
+  filter: drop-shadow(0px 2px 6px rgba(0, 0, 0, 0.1));
 
-  background-color: red;
+  background-color: #fff;
+
+  /* box-shadow: 0px 0px 0px 0px #red; */
+}
+
+.article-title {
+}
+
+li > h3 {
+  font-family: "PT Sans", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+
+  text-transform: uppercase;
+
+  color: #c9a96e;
+}
+
+li > h4 {
+  font-family: "PT Serif";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+
+  color: #171717;
+
+  margin-top: -10px;
+}
+
+li > p {
+  font-family: "PT Serif";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+
+  color: #666666;
+
+  margin-top: -30px;
+
+  padding: 14px;
+}
+
+.fourth-color-text {
+  color: #b1b1b1;
 }
